bap-0.4/ocaml/grammar.output
   0  $accept : %entry% $end

   1  program : stmtlist EOF

   2  stmtlist : revstmtlist

   3  revstmtlist : revstmtlist stmt
   4              |

   5  stmt : JMP expr attrs semi
   6       | CJMP expr COMMA expr COMMA expr attrs semi
   7       | SPECIAL STRING attrs semi
   8       | lval ASSIGN expr attrs semi
   9       | lval EQUAL expr attrs semi
  10       | HALT expr attrs semi
  11       | ASSERT expr attrs semi
  12       | LABEL ID attrs
  13       | ADDR INT attrs
  14       | COMMENT attrs

  15  plusminusint : INT
  16               | MINUS INT

  17  context : ID LSQUARE INT RSQUARE EQUAL INT COMMA plusminusint COMMA styp
  18          | ID EQUAL INT COMMA plusminusint COMMA typ

  19  attrs :
  20        | attr attrs

  21  attr : AT ID STRING
  22       | AT ID context

  23  lval : ID opttyp

  24  opttyp :
  25         | COLON typ

  26  typ : styp
  27      | QUESTION styp
  28      | styp QUESTION styp

  29  styp : ID

  30  letstart : LET ID COLON typ ASSIGN expr

  31  expr : LPAREN expr RPAREN
  32       | expr PLUS expr
  33       | expr MINUS expr
  34       | expr TIMES expr
  35       | expr DIVIDE expr
  36       | expr SDIVIDE expr
  37       | expr MOD expr
  38       | expr SMOD expr
  39       | expr LSHIFT expr
  40       | expr RSHIFT expr
  41       | expr ARSHIFT expr
  42       | expr AND expr
  43       | expr OR expr
  44       | expr XOR expr
  45       | expr EQUALEQUAL expr
  46       | expr NEQ expr
  47       | expr LT expr
  48       | expr LE expr
  49       | expr SLT expr
  50       | expr SLE expr
  51       | expr GT expr
  52       | expr GE expr
  53       | expr SGT expr
  54       | expr SGE expr
  55       | NOT expr
  56       | MINUS expr
  57       | UNKNOWN STRING COLON typ
  58       | STRING
  59       | lval
  60       | IF expr THEN expr ELSE expr
  61       | letstart IN expr
  62       | EXTRACT COLON INT COLON INT COLON LSQUARE expr RSQUARE
  63       | CONCAT COLON LSQUARE expr RSQUARE LSQUARE expr RSQUARE
  64       | ID COLON typ LPAREN expr RPAREN
  65       | TRUE
  66       | FALSE
  67       | INT COLON typ
  68       | expr WITH LSQUARE expr COMMA endian RSQUARE COLON typ assign expr
  69       | expr LSQUARE expr COMMA endian RSQUARE COLON typ

  70  endian : EBIG
  71         | ELITTLE
  72         | expr

  73  semi : SEMI
  74       |

  75  assign : ASSIGN
  76         | EQUAL

  77  %entry% : '\001' program
  78          | '\002' expr

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . program  (77)
	revstmtlist : .  (4)

	.  reduce 4

	program  goto 4
	stmtlist  goto 5
	revstmtlist  goto 6


state 2
	%entry% : '\002' . expr  (78)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 20
	lval  goto 21
	letstart  goto 22


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	%entry% : '\001' program .  (77)

	.  reduce 77


state 5
	program : stmtlist . EOF  (1)

	EOF  shift 23
	.  error


state 6
	stmtlist : revstmtlist .  (2)
	revstmtlist : revstmtlist . stmt  (3)

	ID  shift 24
	COMMENT  shift 25
	CJMP  shift 26
	JMP  shift 27
	LABEL  shift 28
	ADDR  shift 29
	ASSERT  shift 30
	HALT  shift 31
	SPECIAL  shift 32
	EOF  reduce 2

	stmt  goto 33
	lval  goto 34


state 7
	lval : ID . opttyp  (23)
	expr : ID . COLON typ LPAREN expr RPAREN  (64)
	opttyp : .  (24)

	COLON  shift 35
	$end  reduce 24
	ID  reduce 24
	COMMENT  reduce 24
	RPAREN  reduce 24
	LSQUARE  reduce 24
	RSQUARE  reduce 24
	COMMA  reduce 24
	SEMI  reduce 24
	EOF  reduce 24
	CJMP  reduce 24
	JMP  reduce 24
	LABEL  reduce 24
	ADDR  reduce 24
	ASSERT  reduce 24
	HALT  reduce 24
	SPECIAL  reduce 24
	IN  reduce 24
	WITH  reduce 24
	THEN  reduce 24
	ELSE  reduce 24
	PLUS  reduce 24
	MINUS  reduce 24
	DIVIDE  reduce 24
	MOD  reduce 24
	SMOD  reduce 24
	TIMES  reduce 24
	SDIVIDE  reduce 24
	LSHIFT  reduce 24
	RSHIFT  reduce 24
	ARSHIFT  reduce 24
	XOR  reduce 24
	NEQ  reduce 24
	SLT  reduce 24
	SLE  reduce 24
	AND  reduce 24
	OR  reduce 24
	EQUALEQUAL  reduce 24
	LT  reduce 24
	LE  reduce 24
	GT  reduce 24
	GE  reduce 24
	SGT  reduce 24
	SGE  reduce 24
	AT  reduce 24

	opttyp  goto 36


state 8
	expr : INT . COLON typ  (67)

	COLON  shift 37
	.  error


state 9
	expr : STRING .  (58)

	.  reduce 58


state 10
	expr : LPAREN . expr RPAREN  (31)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 38
	lval  goto 21
	letstart  goto 22


state 11
	letstart : LET . ID COLON typ ASSIGN expr  (30)

	ID  shift 39
	.  error


state 12
	expr : UNKNOWN . STRING COLON typ  (57)

	STRING  shift 40
	.  error


state 13
	expr : TRUE .  (65)

	.  reduce 65


state 14
	expr : FALSE .  (66)

	.  reduce 66


state 15
	expr : IF . expr THEN expr ELSE expr  (60)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 41
	lval  goto 21
	letstart  goto 22


state 16
	expr : MINUS . expr  (56)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 42
	lval  goto 21
	letstart  goto 22


state 17
	expr : CONCAT . COLON LSQUARE expr RSQUARE LSQUARE expr RSQUARE  (63)

	COLON  shift 43
	.  error


state 18
	expr : EXTRACT . COLON INT COLON INT COLON LSQUARE expr RSQUARE  (62)

	COLON  shift 44
	.  error


state 19
	expr : NOT . expr  (55)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 45
	lval  goto 21
	letstart  goto 22


state 20
	expr : expr . PLUS expr  (32)
	expr : expr . MINUS expr  (33)
	expr : expr . TIMES expr  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . SDIVIDE expr  (36)
	expr : expr . MOD expr  (37)
	expr : expr . SMOD expr  (38)
	expr : expr . LSHIFT expr  (39)
	expr : expr . RSHIFT expr  (40)
	expr : expr . ARSHIFT expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)
	expr : expr . XOR expr  (44)
	expr : expr . EQUALEQUAL expr  (45)
	expr : expr . NEQ expr  (46)
	expr : expr . LT expr  (47)
	expr : expr . LE expr  (48)
	expr : expr . SLT expr  (49)
	expr : expr . SLE expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GE expr  (52)
	expr : expr . SGT expr  (53)
	expr : expr . SGE expr  (54)
	expr : expr . WITH LSQUARE expr COMMA endian RSQUARE COLON typ assign expr  (68)
	expr : expr . LSQUARE expr COMMA endian RSQUARE COLON typ  (69)
	%entry% : '\002' expr .  (78)

	LSQUARE  shift 46
	WITH  shift 47
	PLUS  shift 48
	MINUS  shift 49
	DIVIDE  shift 50
	MOD  shift 51
	SMOD  shift 52
	TIMES  shift 53
	SDIVIDE  shift 54
	LSHIFT  shift 55
	RSHIFT  shift 56
	ARSHIFT  shift 57
	XOR  shift 58
	NEQ  shift 59
	SLT  shift 60
	SLE  shift 61
	AND  shift 62
	OR  shift 63
	EQUALEQUAL  shift 64
	LT  shift 65
	LE  shift 66
	GT  shift 67
	GE  shift 68
	SGT  shift 69
	SGE  shift 70
	$end  reduce 78


state 21
	expr : lval .  (59)

	.  reduce 59


state 22
	expr : letstart . IN expr  (61)

	IN  shift 71
	.  error


state 23
	program : stmtlist EOF .  (1)

	.  reduce 1


state 24
	lval : ID . opttyp  (23)
	opttyp : .  (24)

	COLON  shift 72
	EQUAL  reduce 24
	ASSIGN  reduce 24

	opttyp  goto 36


state 25
	stmt : COMMENT . attrs  (14)
	attrs : .  (19)

	AT  shift 73
	ID  reduce 19
	COMMENT  reduce 19
	EOF  reduce 19
	CJMP  reduce 19
	JMP  reduce 19
	LABEL  reduce 19
	ADDR  reduce 19
	ASSERT  reduce 19
	HALT  reduce 19
	SPECIAL  reduce 19

	attrs  goto 74
	attr  goto 75


state 26
	stmt : CJMP . expr COMMA expr COMMA expr attrs semi  (6)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 76
	lval  goto 21
	letstart  goto 22


state 27
	stmt : JMP . expr attrs semi  (5)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 77
	lval  goto 21
	letstart  goto 22


state 28
	stmt : LABEL . ID attrs  (12)

	ID  shift 78
	.  error


state 29
	stmt : ADDR . INT attrs  (13)

	INT  shift 79
	.  error


state 30
	stmt : ASSERT . expr attrs semi  (11)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 80
	lval  goto 21
	letstart  goto 22


state 31
	stmt : HALT . expr attrs semi  (10)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 81
	lval  goto 21
	letstart  goto 22


state 32
	stmt : SPECIAL . STRING attrs semi  (7)

	STRING  shift 82
	.  error


state 33
	revstmtlist : revstmtlist stmt .  (3)

	.  reduce 3


state 34
	stmt : lval . ASSIGN expr attrs semi  (8)
	stmt : lval . EQUAL expr attrs semi  (9)

	EQUAL  shift 83
	ASSIGN  shift 84
	.  error


state 35
	opttyp : COLON . typ  (25)
	expr : ID COLON . typ LPAREN expr RPAREN  (64)

	ID  shift 85
	QUESTION  shift 86
	.  error

	styp  goto 87
	typ  goto 88


state 36
	lval : ID opttyp .  (23)

	.  reduce 23


state 37
	expr : INT COLON . typ  (67)

	ID  shift 85
	QUESTION  shift 86
	.  error

	styp  goto 87
	typ  goto 89


state 38
	expr : LPAREN expr . RPAREN  (31)
	expr : expr . PLUS expr  (32)
	expr : expr . MINUS expr  (33)
	expr : expr . TIMES expr  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . SDIVIDE expr  (36)
	expr : expr . MOD expr  (37)
	expr : expr . SMOD expr  (38)
	expr : expr . LSHIFT expr  (39)
	expr : expr . RSHIFT expr  (40)
	expr : expr . ARSHIFT expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)
	expr : expr . XOR expr  (44)
	expr : expr . EQUALEQUAL expr  (45)
	expr : expr . NEQ expr  (46)
	expr : expr . LT expr  (47)
	expr : expr . LE expr  (48)
	expr : expr . SLT expr  (49)
	expr : expr . SLE expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GE expr  (52)
	expr : expr . SGT expr  (53)
	expr : expr . SGE expr  (54)
	expr : expr . WITH LSQUARE expr COMMA endian RSQUARE COLON typ assign expr  (68)
	expr : expr . LSQUARE expr COMMA endian RSQUARE COLON typ  (69)

	RPAREN  shift 90
	LSQUARE  shift 46
	WITH  shift 47
	PLUS  shift 48
	MINUS  shift 49
	DIVIDE  shift 50
	MOD  shift 51
	SMOD  shift 52
	TIMES  shift 53
	SDIVIDE  shift 54
	LSHIFT  shift 55
	RSHIFT  shift 56
	ARSHIFT  shift 57
	XOR  shift 58
	NEQ  shift 59
	SLT  shift 60
	SLE  shift 61
	AND  shift 62
	OR  shift 63
	EQUALEQUAL  shift 64
	LT  shift 65
	LE  shift 66
	GT  shift 67
	GE  shift 68
	SGT  shift 69
	SGE  shift 70
	.  error


state 39
	letstart : LET ID . COLON typ ASSIGN expr  (30)

	COLON  shift 91
	.  error


state 40
	expr : UNKNOWN STRING . COLON typ  (57)

	COLON  shift 92
	.  error


state 41
	expr : expr . PLUS expr  (32)
	expr : expr . MINUS expr  (33)
	expr : expr . TIMES expr  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . SDIVIDE expr  (36)
	expr : expr . MOD expr  (37)
	expr : expr . SMOD expr  (38)
	expr : expr . LSHIFT expr  (39)
	expr : expr . RSHIFT expr  (40)
	expr : expr . ARSHIFT expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)
	expr : expr . XOR expr  (44)
	expr : expr . EQUALEQUAL expr  (45)
	expr : expr . NEQ expr  (46)
	expr : expr . LT expr  (47)
	expr : expr . LE expr  (48)
	expr : expr . SLT expr  (49)
	expr : expr . SLE expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GE expr  (52)
	expr : expr . SGT expr  (53)
	expr : expr . SGE expr  (54)
	expr : IF expr . THEN expr ELSE expr  (60)
	expr : expr . WITH LSQUARE expr COMMA endian RSQUARE COLON typ assign expr  (68)
	expr : expr . LSQUARE expr COMMA endian RSQUARE COLON typ  (69)

	LSQUARE  shift 46
	WITH  shift 47
	THEN  shift 93
	PLUS  shift 48
	MINUS  shift 49
	DIVIDE  shift 50
	MOD  shift 51
	SMOD  shift 52
	TIMES  shift 53
	SDIVIDE  shift 54
	LSHIFT  shift 55
	RSHIFT  shift 56
	ARSHIFT  shift 57
	XOR  shift 58
	NEQ  shift 59
	SLT  shift 60
	SLE  shift 61
	AND  shift 62
	OR  shift 63
	EQUALEQUAL  shift 64
	LT  shift 65
	LE  shift 66
	GT  shift 67
	GE  shift 68
	SGT  shift 69
	SGE  shift 70
	.  error


state 42
	expr : expr . PLUS expr  (32)
	expr : expr . MINUS expr  (33)
	expr : expr . TIMES expr  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . SDIVIDE expr  (36)
	expr : expr . MOD expr  (37)
	expr : expr . SMOD expr  (38)
	expr : expr . LSHIFT expr  (39)
	expr : expr . RSHIFT expr  (40)
	expr : expr . ARSHIFT expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)
	expr : expr . XOR expr  (44)
	expr : expr . EQUALEQUAL expr  (45)
	expr : expr . NEQ expr  (46)
	expr : expr . LT expr  (47)
	expr : expr . LE expr  (48)
	expr : expr . SLT expr  (49)
	expr : expr . SLE expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GE expr  (52)
	expr : expr . SGT expr  (53)
	expr : expr . SGE expr  (54)
	expr : MINUS expr .  (56)
	expr : expr . WITH LSQUARE expr COMMA endian RSQUARE COLON typ assign expr  (68)
	expr : expr . LSQUARE expr COMMA endian RSQUARE COLON typ  (69)

	LSQUARE  shift 46
	$end  reduce 56
	ID  reduce 56
	COMMENT  reduce 56
	RPAREN  reduce 56
	RSQUARE  reduce 56
	COMMA  reduce 56
	SEMI  reduce 56
	EOF  reduce 56
	CJMP  reduce 56
	JMP  reduce 56
	LABEL  reduce 56
	ADDR  reduce 56
	ASSERT  reduce 56
	HALT  reduce 56
	SPECIAL  reduce 56
	IN  reduce 56
	WITH  reduce 56
	THEN  reduce 56
	ELSE  reduce 56
	PLUS  reduce 56
	MINUS  reduce 56
	DIVIDE  reduce 56
	MOD  reduce 56
	SMOD  reduce 56
	TIMES  reduce 56
	SDIVIDE  reduce 56
	LSHIFT  reduce 56
	RSHIFT  reduce 56
	ARSHIFT  reduce 56
	XOR  reduce 56
	NEQ  reduce 56
	SLT  reduce 56
	SLE  reduce 56
	AND  reduce 56
	OR  reduce 56
	EQUALEQUAL  reduce 56
	LT  reduce 56
	LE  reduce 56
	GT  reduce 56
	GE  reduce 56
	SGT  reduce 56
	SGE  reduce 56
	AT  reduce 56


state 43
	expr : CONCAT COLON . LSQUARE expr RSQUARE LSQUARE expr RSQUARE  (63)

	LSQUARE  shift 94
	.  error


state 44
	expr : EXTRACT COLON . INT COLON INT COLON LSQUARE expr RSQUARE  (62)

	INT  shift 95
	.  error


state 45
	expr : expr . PLUS expr  (32)
	expr : expr . MINUS expr  (33)
	expr : expr . TIMES expr  (34)
	expr : expr . DIVIDE expr  (35)
	expr : expr . SDIVIDE expr  (36)
	expr : expr . MOD expr  (37)
	expr : expr . SMOD expr  (38)
	expr : expr . LSHIFT expr  (39)
	expr : expr . RSHIFT expr  (40)
	expr : expr . ARSHIFT expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)
	expr : expr . XOR expr  (44)
	expr : expr . EQUALEQUAL expr  (45)
	expr : expr . NEQ expr  (46)
	expr : expr . LT expr  (47)
	expr : expr . LE expr  (48)
	expr : expr . SLT expr  (49)
	expr : expr . SLE expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GE expr  (52)
	expr : expr . SGT expr  (53)
	expr : expr . SGE expr  (54)
	expr : NOT expr .  (55)
	expr : expr . WITH LSQUARE expr COMMA endian RSQUARE COLON typ assign expr  (68)
	expr : expr . LSQUARE expr COMMA endian RSQUARE COLON typ  (69)

	LSQUARE  shift 46
	$end  reduce 55
	ID  reduce 55
	COMMENT  reduce 55
	RPAREN  reduce 55
	RSQUARE  reduce 55
	COMMA  reduce 55
	SEMI  reduce 55
	EOF  reduce 55
	CJMP  reduce 55
	JMP  reduce 55
	LABEL  reduce 55
	ADDR  reduce 55
	ASSERT  reduce 55
	HALT  reduce 55
	SPECIAL  reduce 55
	IN  reduce 55
	WITH  reduce 55
	THEN  reduce 55
	ELSE  reduce 55
	PLUS  reduce 55
	MINUS  reduce 55
	DIVIDE  reduce 55
	MOD  reduce 55
	SMOD  reduce 55
	TIMES  reduce 55
	SDIVIDE  reduce 55
	LSHIFT  reduce 55
	RSHIFT  reduce 55
	ARSHIFT  reduce 55
	XOR  reduce 55
	NEQ  reduce 55
	SLT  reduce 55
	SLE  reduce 55
	AND  reduce 55
	OR  reduce 55
	EQUALEQUAL  reduce 55
	LT  reduce 55
	LE  reduce 55
	GT  reduce 55
	GE  reduce 55
	SGT  reduce 55
	SGE  reduce 55
	AT  reduce 55


state 46
	expr : expr LSQUARE . expr COMMA endian RSQUARE COLON typ  (69)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 96
	lval  goto 21
	letstart  goto 22


state 47
	expr : expr WITH . LSQUARE expr COMMA endian RSQUARE COLON typ assign expr  (68)

	LSQUARE  shift 97
	.  error


state 48
	expr : expr PLUS . expr  (32)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 98
	lval  goto 21
	letstart  goto 22


state 49
	expr : expr MINUS . expr  (33)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 99
	lval  goto 21
	letstart  goto 22


state 50
	expr : expr DIVIDE . expr  (35)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 100
	lval  goto 21
	letstart  goto 22


state 51
	expr : expr MOD . expr  (37)
